--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,13 +6,10 @@
 #    By: yofouzi <yofouzi@student.1337.ma>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/11/10 11:15:56 by yofouzi           #+#    #+#              #
-#    Updated: 2024/11/10 11:15:59 by yofouzi          ###   ########.fr        #
+#    Updated: 2024/11/10 17:42:25 by yofouzi          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = libft.a
-CC = cc
-CFLAGS = -Wall -Wextra -Werror
 SRCS =	ft_isalpha.c ft_memchr.c ft_putchar_fd.c \
 		ft_strlcpy.c ft_strrchr.c ft_strchr.c \
 		ft_atoi.c ft_isascii.c ft_memcmp.c ft_itoa.c \
@@ -24,25 +21,27 @@ SRCS =	ft_isalpha.c ft_memchr.c ft_putchar_fd.c \
 		ft_putstr_fd.c ft_strjoin.c ft_strncmp.c \
 		ft_tolower.c ft_strnstr.c ft_isalnum.c \
 		ft_memset.c ft_split.c ft_strlcat.c
-OBJS = ${SRCS:.c = .o}
-AR = ar rcs
-RM = rm -fr
+
+NAME = libft.a
+CC = cc
+CFLAGS = -Wall -Wextra -Werror
+OBJS = $(SRCS:.c=.o)
+
+
 all : $(NAME)
 
 $(NAME) : $(OBJS)
-	$(AR) $(NAME) $(OBJS)
+	ar rcs $(NAME) $(OBJS)
 
 %.o : %.c
 	$(CC) $(CFLAGS) -c $< -o $@
 
 clean :
-	$(RM) $(OBJS)
+	rm -f $(OBJS)
 
 fclean : clean
-	$(RM) $(NAME)
+	rm -f $(NAME)
 
 re : fclean all
 
 .PHONY : all clean fclean re
-
-
