--- a/libft/Makefile
+++ b/libft/Makefile
@@ -1,36 +1,47 @@
-#**************************************************************************** #
-# #
-# :: : :: :: :: ::#
-#Makefile : + : : + : : + : #
-#+ : + + : + + : + #
-#By : yofouzi < yofouzi @student .1337.ma> + # + + : ++# + #
-#+ #+ #+ #+ #+ #+ + #+ #
-#Created : 2024 / 11 / 10 11 : 15 : 56 by yofouzi # + # # + # #
-#Updated : 2024 / 11 / 10 17 : 42 : 25 by yofouzi## # ########.fr #
-# #
-#**************************************************************************** #
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: yofouzi <yofouzi@student.1337.ma>          +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2024/11/10 11:15:56 by yofouzi           #+#    #+#              #
+#    Updated: 2024/11/10 17:42:25 by yofouzi          ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
 
-SRCS = ft_isalpha.c ft_memchr.c ft_putchar_fd.c ft_strlcpy.c ft_strrchr.c ft_strchr.c ft_atoi.c ft_isascii.c ft_memcmp.c ft_itoa.c ft_strdup.c ft_strlen.c ft_putendl_fd.c ft_strtrim.c ft_bzero.c ft_isdigit.c ft_putnbr_fd.c ft_toupper.c ft_memcpy.c ft_striteri.c ft_strmapi.c ft_substr.c ft_isprint.c ft_memmove.c ft_calloc.c ft_putstr_fd.c ft_strjoin.c ft_strncmp.c ft_tolower.c ft_strnstr.c ft_isalnum.c ft_memset.c ft_split.c ft_strlcat.c
+SRCS =	ft_isalpha.c ft_memchr.c ft_putchar_fd.c \
+		ft_strlcpy.c ft_strrchr.c ft_strchr.c \
+		ft_atoi.c ft_isascii.c ft_memcmp.c ft_itoa.c \
+		ft_strdup.c ft_strlen.c ft_putendl_fd.c \
+		ft_strtrim.c ft_bzero.c ft_isdigit.c \
+		ft_putnbr_fd.c ft_toupper.c ft_memcpy.c \
+		ft_striteri.c ft_strmapi.c ft_substr.c \
+		ft_isprint.c ft_memmove.c ft_calloc.c \
+		ft_putstr_fd.c ft_strjoin.c ft_strncmp.c \
+		ft_tolower.c ft_strnstr.c ft_isalnum.c \
+		ft_memset.c ft_split.c ft_strlcat.c
 
-			NAME = libft.a CC = cc CFLAGS = -Wall - Wextra
-				- Werror OBJS = $(SRCS
-																			:.c =.o)
+NAME = libft.a
+CC = cc
+CFLAGS = -Wall -Wextra -Werror
+OBJS = $(SRCS:.c=.o)
 
-																				all : $(NAME)
 
-																						$(NAME)
-	: $(OBJS) ar rcs $(NAME) $(OBJS)
+all : $(NAME)
 
-		%.o : %.c $(CC) $(CFLAGS) -
-		c $ <
-	-o $ @
+$(NAME) : $(OBJS)
+	ar rcs $(NAME) $(OBJS)
 
-		clean : rm -
-		f $(OBJS)
+%.o : %.c
+	$(CC) $(CFLAGS) -c $< -o $@
 
-			fclean : clean rm -
-						f $(NAME)
+clean :
+	rm -f $(OBJS)
 
-							re : fclean all
+fclean : clean
+	rm -f $(NAME)
 
-									.PHONY : all clean fclean re
+re : fclean all
+
+.PHONY : all clean fclean re
