--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -1,7 +1,8 @@
 CC = cc
 CFLAGS = -Wall -Wextra -Werror
 NAME = libftprintf.a
-SRCS =  ft_putchar.c ft_putstr.c ft_putnbr.c 
+SRCS =  ft_putchar.c ft_putstr.c ft_putnbr.c ft_printf.c ft_puthex.c \
+	ft_puthex_upper.c ft_putunsigned.c ft_printaddress.c
 OBJS = $(SRCS:.c=.o)
 
 all : $(NAME)
